--- a/views/about.pug
+++ b/views/about.pug
@@ -1,7 +1,4 @@
-doctype html
-head
-	title NMC ABOUT
-	link(rel="stylesheet" type="text/css" href="./static/css/style.css")
-body.about-body
-	.about-body-cont
-script(type="text/javascript" src="./js/script.js")
+extends layout.pug
+
+block content
+		.about-body-cont
