--- a/views/index.pug
+++ b/views/index.pug
@@ -1,16 +1,14 @@
-doctype html
-head
-	title "NEED MORE COFFEE"
-	link(rel='stylesheet' type='text/css' href='./static/css/style.css')
-body.index-body
+extends layout.pug
+
+block content
 	canvas#canvas-bg
+	- let greetings = [ 'Welcome to the', 'Submit a drawing to win free coffee', 'sign up to enjoy free rewards'];
+	- let randomNumber = Math.floor((Math.random()*3));
+	header.index-header-greeting #{greetings[randomNumber]}
 	main.index-body-main
 		.index-title-coffee COFFEE
 		.index-title-house HOUSE
 		.index-links
 			a.index-contact-link(href='../contact') CONTACT
 			a.index-about-link(href='../about') ABOUT
-	.index-smoke-cont
-		img.screen(src='./static/images/smoke04.gif')
-	.index-greeting
-	script(type='text/javascript' src='./static/js/script.js')
+
